# Polytech-SystemSoftware-course

./: README.md  Задание 1 - Шифр.md  Задание 2 - Кибер-журнал.md  Задание 3 - Рынок Кабуки.md
backend/vm-manager/: .gitignore  .terraformrc  Dockerfile  docs.yaml  pyproject.toml  requirements.txt
backend/vm-manager/alembic/: env.py
backend/vm-manager/alembic/versions/: 4ed5e7e1767a_initial.py  56882cb35a0c_add_status_deleted_at_ttyd_fields.py  6b45a7fe415e_update_status_field.py  a881b443a62c_add_ip_addr_default.py  ea2cc19a62d1_add_ip_addres.py  ee4f4075518d_add_created_at.py
backend/vm-manager/src/vm_manager/: db.py  main.py  models.py  schemas.py
backend/vm-manager/src/vm_manager/api/: endpoints.py
backend/vm-manager/src/vm_manager/services/: terraform_manager.py  vm_connection.py  vm_timer.py
backend/vm-manager/terraform/: main.tf  outputs.tf  provider.tf  variables.tf
backend/vm-manager/terraform/templates/: cloud-init.j2
frontend/: Dockerfile  README.md
lecture/: lecture-gRPC.txt  lecture-logging.md
lectures/: 1.1 и 1.2 Get started и командная оболочка  1.1_1.2_getting_started_and_command_line.md  1.3 lecture-privileges.md  1.4 working_with_text.md  1.5_storage-devices.md  1.6 package-management.md  1.7 lecture-processes.md  2.1_2.3_IP_ICMP_SSH.md  2.1_IP_ICMP.md  2.2_TCP-UDP.md  2.2_UDP_TCP.md  2.3.1_SSH.md  2.3.4 lecture-DNS.md  2.3_Application_Layer.md  2.4_Routing.md  2.5_iptables.md  3.1_basics_of_containerization.md  3.2 lecture-Working-with-Docker-and-optimizing-images.md  3.2_Working-with-Docker-and-optimizing-images.md  4.1_git_basics.md  (+37 more)
(+201 files in other folders)
